--- a/index.html
+++ b/index.html
@@ -231,12 +231,18 @@
       const selected = deliverySelect.value;
       
       }
+       if(deliveryType === 'with' && selected && deliveryPrices[selected]) {
+        msg += `\nالتوصيل إلى: ${deliveryNames[selected]}\nسعر التوصيل: ${deliveryPrices[selected].toLocaleString()} ل.ل`;
+      } else {
+        msg += '\nبدون توصيل';
+      }
       window.open(`https://wa.me/${phone}?text=${encodeURIComponent(msg)}`,'_blank');
       closeDeliveryModal();
     }
   </script>
 </body>
 </html>
+
 
 
 
