--- a/index.html
+++ b/index.html
@@ -236,12 +236,17 @@
       } else {
         msg += '\nبدون توصيل';
       }
+    msg += `\nالتوصيل إلى: ${deliveryNames[selected]}\nسعر التوصيل: ${deliveryPrices[selected].toLocaleString()} ل.ل`;
+      } else {
+        msg += '\nبدون توصيل';
+      }
       window.open(`https://wa.me/${phone}?text=${encodeURIComponent(msg)}`,'_blank');
       closeDeliveryModal();
     }
   </script>
 </body>
 </html>
+
 
 
 
